--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <script src="https://use.fontawesome.com/ebd2ff6459.js"></script> -->
     <link rel="stylesheet" href="style.css">
     <title>Password Generator</title>
 </head>
 
 <body>
     <div class="container">
+        <!-- <div class="result-container"> -->
         <h2>Password Generator</h2>
-        <div class="result-container"></div>
+        <div class="result-container">
         <span id="result"></span>
         <button class="button" id="clipboard">
-            <!-- <i class="far fa-clipboard"></i> -->
+            Copy
+                <!-- <i class="fas fa-clipboard-check"></i> -->
             <!-- Look this up from far fa -->
         </button>
+        </div>
 
     <div class="settings">
         <div class="settings">
@@ -25,7 +29,7 @@
             <input type="number" id="length" min="4" max="20" value="20" />
         </div>
         <div class="settings">
-            <label>Include uppercadse letters</label>
+            <label>Include uppercase letters</label>
             <input type="checkbox" id="uppercase" checked />
         </div>
         <div class="settings">
